--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       , "passport": "0.1.x"
       , "passport-twitter": "0.1.x"
       , "passport-facebook": "0.1.x"
+      , "mongoose": "latest"
     }
   , "engines": {
     "node": ">= 0.8.0",
