--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       , "passport-twitter": "0.1.x"
       , "passport-facebook": "0.1.x"
       , "mongoose": "latest"
+      , "underscore": "latest"
     }
   , "engines": {
     "node": ">= 0.8.0",
